--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "5.0"
+django = "<5.1,>=5.0"
+asgiref = "==3.7.2"
+sqlparse = "==0.4.4"
+gunicorn = "<22.0,>=21.2"
+dj-database-url = "<3.0,>=2.0"
+whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
 
 [dev-packages]
 
