--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "<5.1,>=5.0"
 asgiref = "==3.7.2"
-sqlparse = "==0.4.4"
-gunicorn = "<22.0,>=21.2"
 dj-database-url = "<3.0,>=2.0"
-whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
+django = "<5.1,>=5.0"
+gunicorn = "<22.0,>=21.2"
+inflect = "7.0.0"
 psycopg = {extras = ["binary"], version = "*"}
+sqlparse = "==0.4.4"
+whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
 
 [dev-packages]
 
