--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
+Brotli==1.1.0
+Django==5.0.1
+annotated-types==0.6.0
 asgiref==3.7.2
+dj-database-url==2.1.0
+gunicorn==21.2.0
+inflect==7.0.0
+packaging==23.2
+psycopg-binary==3.1.16
+psycopg==3.1.16
+pydantic==2.5.3
+pydantic_core==2.14.6
 sqlparse==0.4.4
-django>=5.0,<5.1
-gunicorn>=21.2,<22.0
-dj-database-url>=2.0,<3.0
-whitenoise[brotli]>=6.0,<7.0
-
-# Uncomment these lines to use a Postgres database. Both are needed, since in production
-# (which uses Linux) we want to install from source, so that security updates from the
-# underlying Heroku stack image are picked up automatically, thanks to dynamic linking.
-# On other platforms/in development, the precompiled binary package is used instead, to
-# speed up installation and avoid errors from missing libraries/headers.
-psycopg[c]; sys_platform == "linux"
-psycopg[binary]; sys_platform != "linux"
+typing_extensions==4.9.0
+whitenoise==6.6.0
