--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,15 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.7.2"
+coreapi = "2.3.3"
 dj-database-url = "<3.0,>=2.0"
 django = "<5.1,>=5.0"
+djangorestframework = "==3.14.0"
+djangorestframework-simplejwt = "5.3.1"
 gunicorn = "<22.0,>=21.2"
 inflect = "7.0.0"
 psycopg = {extras = ["binary"], version = "*"}
+setuptools = "69.0.3"
 sqlparse = "==0.4.4"
 whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
 
