--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
 Brotli==1.1.0
 Django==5.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+PyJWT==2.8.0
 annotated-types==0.6.0
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==2.1.0
+djangorestframework-simplejwt==5.3.1
+djangorestframework==3.14.0
 gunicorn==21.2.0
+idna==3.6
 inflect==7.0.0
+itypes==1.2.0
 packaging==23.2
 psycopg-binary==3.1.16
 psycopg==3.1.16
 pydantic==2.5.3
 pydantic_core==2.14.6
+pytz==2023.3.post1
+requests==2.31.0
+setuptools==69.0.3
 sqlparse==0.4.4
 typing_extensions==4.9.0
+uritemplate==4.1.1
+urllib3==2.1.0
 whitenoise==6.6.0
