--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.7.2"
+boto3 = "1.34.2"
 coreapi = "2.3.3"
 dj-database-url = "<3.0,>=2.0"
 django = "<5.1,>=5.0"
