--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Brotli==1.1.0
-Django==5.0.1
+Django==5.0.3
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 PyJWT==2.8.0
 annotated-types==0.6.0
 asgiref==3.7.2
+boto3==1.34.2
+botocore==1.34.73
 certifi==2024.2.2
 charset-normalizer==3.3.2
 coreapi==2.3.3
@@ -16,14 +18,18 @@ gunicorn==21.2.0
 idna==3.6
 inflect==7.0.0
 itypes==1.2.0
+jmespath==1.0.1
 packaging==24.0
 psycopg-binary==3.1.18
 psycopg==3.1.18
 pydantic==2.6.4
 pydantic_core==2.16.3
+python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
+s3transfer==0.9.0
 setuptools==69.0.3
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
 uritemplate==4.1.1
