--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+    - name: Run Tests with Coverage
       run: |
-        python manage.py test --parallel --shuffle
+        pip install coverage
+        coverage run manage.py test --parallel --shuffle
+        coverage report
