--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 asgiref = "==3.7.2"
 boto3 = "1.34.2"
 coreapi = "2.3.3"
+coverage = "7.4.4"
 dj-database-url = "<3.0,>=2.0"
 django = "<5.1,>=5.0"
 djangorestframework = "==3.14.0"
