--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==7.4.4
 dj-database-url==2.1.0
 djangorestframework-simplejwt==5.3.1
 djangorestframework==3.14.0
