Fix import paths for Django and coverage

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,5 +27,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests with Coverage
       run: |
-        coverage run --omit='*/tests.py,*/test_*.py' manage.py test --parallel --shuffle
-        coverage report
+        coverage.sh
