--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-Brotli==1.1.0
-Django==5.0.3
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-PyJWT==2.10.0
 annotated-types==0.7.0
 asgiref==3.7.2
 boto3==1.34.2
-botocore==1.34.158
+botocore==1.34.162
+Brotli==1.1.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==7.4.4
-dj-database-url==2.1.0
-djangorestframework-simplejwt==5.3.1
+dj-database-url==2.3.0
+Django==5.0.9
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 gunicorn==21.2.0
 idna==3.10
 inflect==7.0.0
 itypes==1.2.0
+Jinja2==3.1.4
 jmespath==1.0.1
+MarkupSafe==3.0.2
 packaging==24.2
-psycopg-binary==3.2.3
 psycopg==3.2.3
-pydantic==2.6.4
-pydantic_core==2.16.3
+psycopg-binary==3.2.3
+pydantic==2.10.1
+pydantic_core==2.27.1
+PyJWT==2.10.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
@@ -33,6 +33,7 @@ setuptools==69.0.3
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.12.2
+tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
-whitenoise==6.6.0
+whitenoise==6.8.2
