--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.7.2"
-boto3 = "1.34.2"
+boto3 = "==1.35.68"
 coreapi = "2.3.3"
 coverage = "7.4.4"
 dj-database-url = "<3.0,>=2.0"
