--- a/Pipfile
+++ b/Pipfile
@@ -10,13 +10,13 @@ coreapi = "2.3.3"
 coverage = "7.4.4"
 dj-database-url = "<3.0,>=2.0"
 django = "<5.1,>=5.0"
-djangorestframework = "==3.14.0"
-djangorestframework-simplejwt = "5.3.1"
-gunicorn = "<22.0,>=21.2"
+djangorestframework = "==3.15.2"
+djangorestframework-simplejwt = "==5.3.1"
+gunicorn = "==23.0.0"
 inflect = "7.0.0"
 psycopg = {extras = ["binary"], version = "3.2.3"}
-setuptools = "69.0.3"
-sqlparse = "==0.4.4"
+setuptools = "==75.6.0"
+sqlparse = "==0.5.2"
 whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
 
 [dev-packages]
@@ -24,4 +24,3 @@ whitenoise = {extras = ["brotli"], version = "<7.0,>=6.0"}
 [requires]
 python_version = "3.12"
 python_full_version = "3.12.7"
-
